--- a/client/.gitignore
+++ b/client/.gitignore
@@ -40,3 +40,9 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+/.vscode/extensions.json
+/.vscode/launch.json
+/.vscode/tasks.json
+/src/assets/.gitkeep
+/.editorconfig
+/package-lock.json
